preparing data for backend on login form

--- a/views/login.html
+++ b/views/login.html
@@ -149,13 +149,14 @@
   }
 }
 
+
 </style>  
 
 <script type="text/javascript">
 function doLogin(){
     var login_info = {
-         username : $('#username').val(),
-         password : $('#password').val()
+         'username' : $('#username').val(),
+         'password' : $('#password').val()
     }
 
 }
