modified main page content

--- a/views/main_page.html
+++ b/views/main_page.html
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="d-flex position-relative float-left">
-            <h3 class="section-title">Latest news</h3>
+            <h3 class="section-title">Latest </h3>
           </div>
         </div>
       </div>
