adding article views

--- a/views/main_page.html
+++ b/views/main_page.html
@@ -8,161 +8,45 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-9">
-          <div class="row">
-            <div class="col-sm-4  mb-5 mb-sm-2">
-              <div class="position-relative image-hover">
-                <img
-                  src="assets/images/dashboard/star-magazine-9.jpg"
-                  class="img-fluid"
-                  alt="world-news"
-                />
-                <span class="thumb-title">LIFESTYLE</span>
-              </div>
-              <h5 class="font-weight-600 mt-3">
-                The island country that gave Mayor Pete his name
-              </h5>
-            </div>
-            <div class="col-sm-4 mb-5 mb-sm-2">
-              <div class="position-relative image-hover">
-                <img
-                  src="assets/images/dashboard/star-magazine-10.jpg"
-                  class="img-fluid"
-                  alt="world-news"
-                />
-                <span class="thumb-title">SPORTS</span>
-              </div>
-              <h5 class="font-weight-600 mt-3">
-                Disney parks expand (good) vegan food options
-              </h5>
-            </div>
-            <div class="col-sm-4 mb-5 mb-sm-2">
-              <div class="position-relative image-hover">
-                <img
-                  src="assets/images/dashboard/star-magazine-11.jpg"
-                  class="img-fluid"
-                  alt="world-news"
-                />
-                <span class="thumb-title">INTERNET</span>
-              </div>
-              <h5 class="font-weight-600 mt-3">
-                A hot springs where clothing is optional after dark
-              </h5>
-            </div>
-          </div>
-          <div class="row mt-3">
-            <div class="col-sm-4 mb-5 mb-sm-2">
-              <div class="position-relative image-hover">
-                <img
-                  src="assets/images/dashboard/star-magazine-12.jpg"
-                  class="img-fluid"
-                  alt="world-news"
-                />
-                <span class="thumb-title">NEWS</span>
-              </div>
-              <h5 class="font-weight-600 mt-3">
-                Japanese chef carves food into incredible pieces of art
-              </h5>
-            </div>
-            <div class="col-sm-4 mb-5 mb-sm-2">
-              <div class="position-relative image-hover">
-                <img
-                  src="assets/images/dashboard/star-magazine-13.jpg"
-                  class="img-fluid"
-                  alt="world-news"
-                />
-                <span class="thumb-title">NEWS</span>
-              </div>
-              <h5 class="font-weight-600 mt-3">
-                The Misanthrope Society: A Taipei bar for people who
-              </h5>
-            </div>
-            <div class="col-sm-4 mb-5 mb-sm-2">
-              <div class="position-relative image-hover">
-                <img
-                  src="assets/images/dashboard/star-magazine-14.jpg"
-                  class="img-fluid"
-                  alt="world-news"
-                />
-                <span class="thumb-title">TOURISM</span>
-              </div>
-              <h5 class="font-weight-600 mt-3">
-                From Pakistan to the Caribbean: Curry's journey
-              </h5>
-            </div>
-          </div>
+        <div id="articles-main" class="col-lg-9">
+          
+
         </div>
-        <div class="col-lg-3">
-          <div class="position-relative mb-3">
-            <img
-              src="assets/images/dashboard/star-magazine-15.jpg"
-              class="img-fluid"
-              alt="world-news"
-            />
-            <div class="video-thumb text-muted">
-              <span><i class="mdi mdi-menu-right"></i></span>LIVE
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="d-flex position-relative float-left">
-                <h3 class="section-title">Latest News</h3>
-              </div>
-            </div>
-            <div class="col-sm-12">
-              <div class="border-bottom pb-3">
-                <h5 class="font-weight-600 mt-0 mb-0">
-                  South Korea’s Moon Jae-in sworn in vowing address
-                </h5>
-                <p class="text-color m-0 d-flex align-items-center">
-                  <span class="fs-10 mr-1">2 hours ago</span>
-                  <i class="mdi mdi-bookmark-outline mr-3"></i>
-                  <span class="fs-10 mr-1">126</span>
-                  <i class="mdi mdi-comment-outline"></i>
-                </p>
-              </div>
-            </div>
-            <div class="col-sm-12">
-              <div class="border-bottom pt-4 pb-3">
-                <h5 class="font-weight-600 mt-0 mb-0">
-                  South Korea’s Moon Jae-in sworn in vowing address
-                </h5>
-                <p class="text-color m-0 d-flex align-items-center">
-                  <span class="fs-10 mr-1">2 hours ago</span>
-                  <i class="mdi mdi-bookmark-outline mr-3"></i>
-                  <span class="fs-10 mr-1">126</span>
-                  <i class="mdi mdi-comment-outline"></i>
-                </p>
-              </div>
-            </div>
-            <div class="col-sm-12">
-              <div class="border-bottom pt-4 pb-3">
-                <h5 class="font-weight-600 mt-0 mb-0">
-                  South Korea’s Moon Jae-in sworn in vowing address
-                </h5>
-                <p class="text-color m-0 d-flex align-items-center">
-                  <span class="fs-10 mr-1">2 hours ago</span>
-                  <i class="mdi mdi-bookmark-outline mr-3"></i>
-                  <span class="fs-10 mr-1">126</span>
-                  <i class="mdi mdi-comment-outline"></i>
-                </p>
-              </div>
-            </div>
-            <div class="col-sm-12">
-              <div class="pt-4">
-                <h5 class="font-weight-600 mt-0 mb-0">
-                  South Korea’s Moon Jae-in sworn in vowing address
-                </h5>
-                <p class="text-color m-0 d-flex align-items-center">
-                  <span class="fs-10 mr-1">2 hours ago</span>
-                  <i class="mdi mdi-bookmark-outline mr-3"></i>
-                  <span class="fs-10 mr-1">126</span>
-                  <i class="mdi mdi-comment-outline"></i>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+       
       </div>
     </div>
   </div>
+
+  <script type="text/javascript">
+    getArticles();
+
+    function getArticles(){
+    $.ajax({
+      url: 'api/user/articles',
+      type: 'GET',
+      beforeSend: function(xhr){xhr.setRequestHeader('Authentication', localStorage.getItem('token'));},
+      success: function(data){
+        console.log(data);
+
+          var html = '<div class="row">';
+          
+          for(var i = 0; i < data.length; i++){
+            var decodedHTML = window.atob(data[i].picture64);
+            html += '<div class="col-sm-4 mb-5 mb-sm-2"><div class="position-relative image-hover">'
+                +'<img src="data:image/png;base64,'+data[i].picture64+'" class="img-fluid" style = "width:300px; height: 150px;" />'
+                +'<span class="thumb-title">NEWS</span></div><h5 class="font-weight-600 mt-3">'
+                +data[i].title+
+              '</h5></div>'
+              if((i+1) % 3 == 0){
+                html += '</div><div class="row mt-3">'
+              }
+              
+          }
+          html += '</div>'
+          console.log(html);
+          $("#articles-main").html(html);
+      }
+
+    });
+  }
+  </script>
