--- a/views/main_page.html
+++ b/views/main_page.html
@@ -26,15 +26,15 @@
       type: 'GET',
       beforeSend: function(xhr){xhr.setRequestHeader('Authentication', localStorage.getItem('token'));},
       success: function(data){
-        console.log(data);
+       
 
           var html = '<div class="row">';
           
           for(var i = 0; i < data.length; i++){
             var decodedHTML = window.atob(data[i].picture64);
-            html += '<div class="col-sm-4 mb-5 mb-sm-2"><div class="position-relative image-hover">'
-                +'<img src="data:image/png;base64,'+data[i].picture64+'" class="img-fluid" style = "width:300px; height: 150px;" />'
-                +'<span class="thumb-title">NEWS</span></div><h5 class="font-weight-600 mt-3">'
+            html += '<div id="'+data[i].id+'" onclick="openPage();" class="col-sm-4 mb-5 mb-sm-2"><div class="position-relative image-hover">'
+                +'<a onclick="openPage();"><img src="data:image/png;base64,'+data[i].picture64+'" class="img-fluid" style = "width:300px; height: 150px;" /></a>'
+                +'<span class="thumb-title">'+data[i].category+'</span></div><h5 class="font-weight-600 mt-3">'
                 +data[i].title+
               '</h5></div>'
               if((i+1) % 3 == 0){
@@ -43,10 +43,28 @@
               
           }
           html += '</div>'
-          console.log(html);
+          
           $("#articles-main").html(html);
       }
 
     });
-  }
+    }
+    function openPage(){
+      
+      $('div.col-sm-4').click(function() {
+        var id = $(this).attr('id');
+        localStorage.removeItem("article_id");
+        window.localStorage.setItem('article_id', id);
+        changeLocations();
+      }); 
+
+      function changeLocations(){
+        window.location = "#news_post";
+      }
+     
+      
+
+
+    
+    }
   </script>
