adding specific view for sports

--- a/views/sports.html
+++ b/views/sports.html
@@ -1,326 +1,83 @@
 <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="text-center">
-          <h1 class="text-center mt-5">
-            Sports
-          </h1>
-          <p class="text-secondary fs-15">
-            This text can be added in the category Description field in
-            dashboard
-          </p>
-        </div>
-        <h5 class="text-muted font-weight-medium mb-3">World News</h5>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-6  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_1.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h1 class="font-weight-600 mt-3">
-          Melania Trump speaks about courage at State Department
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="text-center">
+        <h1 class="text-center mt-5">
+          Sports
         </h1>
-        <p class="fs-15 font-weight-normal">
-          Lorem Ipsum has been the industry's standard dummy text ever since
-          the 1500s, when an unknown printer took a galley of type and
+        <p class="text-secondary fs-15">
+          This is the latest in sports
         </p>
       </div>
-      <div class="col-lg-6  mb-5 mb-sm-2">
+      <h5 class="text-muted font-weight-medium mb-3">Sports News</h5>
+    </div>
+    <div class="container">
+      <div class="popular-news">
         <div class="row">
-          <div class="col-sm-6  mb-5 mb-sm-2">
-            <div class="position-relative image-hover">
-              <img
-                src="../assets/images/sports/Sports_4.jpg"
-                class="img-fluid"
-                alt="world-news"
-              />
-              <span class="thumb-title">SPORTS</span>
+          <div class="col-lg-3">
+            <div class="d-flex position-relative float-left">
+              <h3 class="section-title">Latest </h3>
             </div>
-            <h5 class="font-weight-600 mt-3">
-              A look at California's eerie plane graveyards
-            </h5>
-            <p class="fs-15 font-weight-normal">
-              Lorem Ipsum has been the industry's standard dummy text
-            </p>
-          </div>
-          <div class="col-sm-6  mb-5 mb-sm-2">
-            <div class="position-relative image-hover">
-              <img
-                src="../assets/images/sports/Sports_2.jpg"
-                class="img-fluid"
-                alt="world-news"
-              />
-              <span class="thumb-title">SPORTS</span>
-            </div>
-            <h5 class="font-weight-600 mt-3">
-              The world's most beautiful racecourses
-            </h5>
-            <p class="fs-15 font-weight-normal">
-              Lorem Ipsum has been the industry's standard dummy text
-            </p>
           </div>
         </div>
-        <div class="row mt-3">
-          <div class="col-sm-6  mb-5 mb-sm-2">
-            <div class="position-relative image-hover">
-              <img
-                src="../assets/images/sports/Sports_5.jpg"
-                class="img-fluid"
-                alt="world-news"
-              />
-              <span class="thumb-title">SPORTS</span>
-            </div>
-            <h5 class="font-weight-600 mt-3">
-              Japan cancels cherry blossom festivals over virus fears
-            </h5>
-            <p class="fs-15 font-weight-normal">
-              Lorem Ipsum has been the industry's standard dummy text
-            </p>
+        <div class="row">
+          <div id="articles-main" class="col-lg-9">
+            
+  
           </div>
-          <div class="col-sm-6">
-            <div class="position-relative image-hover">
-              <img
-                src="../assets/images/sports/Sports_3.jpg"
-                class="img-fluid"
-                alt="world-news"
-              />
-              <span class="thumb-title">SPORTS</span>
-            </div>
-            <h5 class="font-weight-600 mt-3">
-              Classic cars reborn as electric vehicles
-            </h5>
-            <p class="fs-15 font-weight-normal">
-              Lorem Ipsum has been the industry's standard dummy text
-            </p>
-          </div>
+         
         </div>
       </div>
     </div>
-    <div class="row mt-5">
-      <div class="col-sm-12">
-        <h5 class="text-muted font-weight-medium mb-3">Popular News</h5>
-      </div>
-    </div>
-    <div class="row mb-4">
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_6.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          The island country that gave Mayor Pete his name
-        </h5>
-      </div>
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_10.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          Disney parks expand (good) vegan food options
-        </h5>
-      </div>
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_14.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          A hot springs where clothing is optional after dark
-        </h5>
-      </div>
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_16.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          A hot springs where clothing is optional after dark
-        </h5>
-      </div>
-    </div>
-    <div class="row mb-4">
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_8.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          Japanese chef carves food into incredible pieces of art
-        </h5>
-      </div>
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_12.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          The Misanthrope Society: A Taipei bar for people who
-        </h5>
-      </div>
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_18.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          From Pakistan to the Caribbean: Curry's journey
-        </h5>
-      </div>
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_20.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          A hot springs where clothing is optional after dark
-        </h5>
-      </div>
-    </div>
-    <div class="row mb-4">
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_7.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          The island country that gave Mayor Pete his name
-        </h5>
-      </div>
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_11.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          Disney parks expand (good) vegan food options
-        </h5>
-      </div>
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_15.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          A hot springs where clothing is optional after dark
-        </h5>
-      </div>
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_17.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          A hot springs where clothing is optional after dark
-        </h5>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_9.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          Japanese chef carves food into incredible pieces of art
-        </h5>
-      </div>
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_13.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          The Misanthrope Society: A Taipei bar for people who
-        </h5>
-      </div>
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_19.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          From Pakistan to the Caribbean: Curry's journey
-        </h5>
-      </div>
-      <div class="col-sm-3  mb-5 mb-sm-2">
-        <div class="position-relative image-hover">
-          <img
-            src="../assets/images/sports/Sports_21.jpg"
-            class="img-fluid"
-            alt="world-news"
-          />
-          <span class="thumb-title">SPORTS</span>
-        </div>
-        <h5 class="font-weight-600 mt-3">
-          From Pakistan to the Caribbean: Curry's journey
-        </h5>
-      </div>
-    </div>
-  </div>
+
+<script type="text/javascript">
+  getArticlesSport("SPORT");
+
+  function getArticlesSport(category){
+  $.ajax({
+    url: 'api/user/articles/cat/' + category,
+    type: 'GET',
+    beforeSend: function(xhr){xhr.setRequestHeader('Authentication', localStorage.getItem('token'));},
+    success: function(data){
+     
+
+        var html = '<div class="row">';
+        
+        for(var i = 0; i < data.length; i++){
+          var decodedHTML = window.atob(data[i].picture64);
+          html += '<div id="'+data[i].id+'" onclick="openPage();" class="col-sm-4 mb-5 mb-sm-2"><div class="position-relative image-hover">'
+              +'<a onclick="openPage();"><img src="data:image/png;base64,'+data[i].picture64+'" class="img-fluid" style = "width:300px; height: 150px;" /></a>'
+              +'<span class="thumb-title">'+data[i].category+'</span></div><h5 class="font-weight-600 mt-3">'
+              +data[i].title+
+            '</h5></div>'
+            if((i+1) % 3 == 0){
+              html += '</div><div class="row mt-3">'
+            }
+            
+        }
+        html += '</div>'
+        
+        $("#articles-main").html(html);
+    }
+
+  });
+  }
+  function openPage(){
+    
+    $('div.col-sm-4').click(function() {
+      var id = $(this).attr('id');
+      localStorage.removeItem("article_id");
+      window.localStorage.setItem('article_id', id);
+      changeLocations();
+    }); 
+
+    function changeLocations(){
+      window.location = "#news_post";
+    }
+   
+    
+
+
+  
+  }
+</script>
