--- a/views/news_post.html
+++ b/views/news_post.html
@@ -13,7 +13,7 @@
   <script type="text/javascript">
    
 
-    getArticle(localStorage.getItem("article_id"));
+    //getArticle(localStorage.getItem("article_id"));
     
     
     
@@ -38,7 +38,7 @@
           
             
           $("#article_view").html(html);
-          localStorage.removeItem("article_id");
+         
       }
 
     });
