--- a/views/sports.html
+++ b/views/sports.html
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="row">
-          <div id="articles-main" class="col-lg-9">
+          <div id="articles-sports" class="col-lg-9">
             
   
           </div>
@@ -31,7 +31,8 @@
     </div>
 
 <script type="text/javascript">
-  getArticlesSport("SPORT");
+
+  
 
   function getArticlesSport(category){
   $.ajax({
@@ -40,16 +41,15 @@
     beforeSend: function(xhr){xhr.setRequestHeader('Authentication', localStorage.getItem('token'));},
     success: function(data){
      
-
+        console.log("hashah");
         var html = '<div class="row">';
         
         for(var i = 0; i < data.length; i++){
-          var decodedHTML = window.atob(data[i].picture64);
+          
           html += '<div id="'+data[i].id+'" onclick="openPage();" class="col-sm-4 mb-5 mb-sm-2"><div class="position-relative image-hover">'
               +'<a onclick="openPage();"><img src="data:image/png;base64,'+data[i].picture64+'" class="img-fluid" style = "width:300px; height: 150px;" /></a>'
               +'<span class="thumb-title">'+data[i].category+'</span></div><h5 class="font-weight-600 mt-3">'
-              +data[i].title+
-            '</h5></div>'
+              +data[i].title+'</h5></div>'
             if((i+1) % 3 == 0){
               html += '</div><div class="row mt-3">'
             }
@@ -57,11 +57,14 @@
         }
         html += '</div>'
         
-        $("#articles-main").html(html);
+        $("#articles-sports").html(html);
     }
 
   });
   }
+
+  getArticlesSport("SPORT");
+
   function openPage(){
     
     $('div.col-sm-4').click(function() {
