--- a/views/sports.html
+++ b/views/sports.html
@@ -16,7 +16,7 @@
         <div class="row">
           <div class="col-lg-3">
             <div class="d-flex position-relative float-left">
-              <h3 class="section-title">Latest </h3>
+              <h3 class="section-title">Latest in Sports </h3>
             </div>
           </div>
         </div>
